--- a/src/style/_authorize.scss
+++ b/src/style/_authorize.scss
@@ -1,14 +1,8 @@
 .auth-btn-wrapper
-{
-    display: flex;
-
+{  
+    overflow: hidden;
     padding: 10px 0;
-
-    justify-content: center;
-
-    .btn-done {
-      margin-right: 1em;
-    }
+    -webkit-box-pack: center; 
 }
 
 .auth-wrapper
@@ -21,7 +15,6 @@
     .authorize
     {
         padding-right: 20px;
-        margin-right: 10px;
     }
 }
 
@@ -65,19 +58,7 @@
 
         border-radius: 4px;
 
-        background-color: #ffeeee;
-
-        color: red;
-        
-        margin: 1em;
-
         @include text_code();
-
-        b
-        {
-            text-transform: capitalize;
-            margin-right: 1em;
-        }
     }
 }
 
@@ -88,15 +69,6 @@
         font-size: 14px;
 
         @include text_headline();
-
-        a
-        {
-          font-size: 12px;
-          color: $auth-select-all-none-link-font-color;
-          cursor: pointer;
-          padding-left: 10px;
-          text-decoration: underline;
-        }
     }
 }
 
