--- a/src/style/_form.scss
+++ b/src/style/_form.scss
@@ -1,18 +1,18 @@
 select
 {
     font-size: 14px;
-    font-weight: bold;
+    // font-weight: bold;
 
-    padding: 5px 40px 5px 10px;
+    padding: 5px 5px 5px 5px;
 
-    border: 2px solid $form-select-border-color;
+    border: 1px solid #bcbcbc;
+    
     border-radius: 4px;
-    background: $form-select-background-color url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M13.418 7.859c.271-.268.709-.268.978 0 .27.268.272.701 0 .969l-3.908 3.83c-.27.268-.707.268-.979 0l-3.908-3.83c-.27-.267-.27-.701 0-.969.271-.268.709-.268.978 0L10 11l3.418-3.141z"/></svg>') right 10px center no-repeat;
+    background: $form-select-background-color ;
     background-size: 20px;
     box-shadow: 0 1px 2px 0 rgba($form-select-box-shadow-color, .25);
 
     @include text_headline();
-    appearance: none;
 
     &[multiple]
     {
@@ -27,15 +27,6 @@ select
     }
 }
 
-.opblock-body select
-{
-    min-width: 230px;
-    @media (max-width: 768px)
-    {
-        min-width: 180px;
-    }
-}
-
 label
 {
     font-size: 12px;
@@ -46,26 +37,15 @@ label
     @include text_headline();
 }
 
+
 input[type=text],
 input[type=password],
 input[type=search],
 input[type=email],
 input[type=file]
 {
-    @media (max-width: 768px) {
-      max-width: 175px;
-    }
-}
 
-
-input[type=text],
-input[type=password],
-input[type=search],
-input[type=email],
-input[type=file],
-textarea
-{
-    min-width: 100px;
+    width: 100%;
     margin: 5px 0;
     padding: 8px 10px;
 
@@ -78,27 +58,6 @@ textarea
     {
         @include invalidFormElement();
     }
-
-}
-
-input,
-textarea,
-select {
-    &[disabled] {
-        // opacity: 0.85;
-        background-color: #fafafa;
-        color: #888;
-        cursor: not-allowed;
-    }
-}
-
-select[disabled] {
-    border-color: #888;
-}
-
-textarea[disabled] {
-    background-color: #41444e;
-    color: #fff;
 }
 
 @keyframes shake
@@ -137,9 +96,9 @@ textarea
     min-height: 280px;
     padding: 10px;
 
-    border: none;
+    //border: none;
     border-radius: 4px;
-    outline: none;
+    outline: 0;
     background: rgba($form-textarea-background-color,.8);
 
     @include text_code();
@@ -163,6 +122,10 @@ textarea
         background: $form-textarea-curl-background-color;
 
         @include text_code($form-textarea-curl-font-color);
+    }
+    
+    &.invalid {
+        @include invalidFormElement();
     }
 }
 
@@ -222,7 +185,7 @@ textarea
 
         &:checked + label > .item
         {
-            background: $form-checkbox-background-color url('data:image/svg+xml, <svg width="10px" height="8px" viewBox="3 7 10 8" version="1.1" xmlns="http://www.w3.org/2000/svg"><polygon id="Rectangle-34" stroke="none" fill="#41474E" fill-rule="evenodd" points="6.33333333 15 3 11.6666667 4.33333333 10.3333333 6.33333333 12.3333333 11.6666667 7 13 8.33333333"></polygon></svg>') center center no-repeat;
+            background: $form-checkbox-background-color url(data:image/svg+xml,%0A%3Csvg%20width%3D%2210px%22%20height%3D%228px%22%20viewBox%3D%223%207%2010%208%22%20version%3D%221.1%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%3E%0A%20%20%20%20%3C%21--%20Generator%3A%20Sketch%2042%20%2836781%29%20-%20http%3A//www.bohemiancoding.com/sketch%20--%3E%0A%20%20%20%20%3Cdesc%3ECreated%20with%20Sketch.%3C/desc%3E%0A%20%20%20%20%3Cdefs%3E%3C/defs%3E%0A%20%20%20%20%3Cpolygon%20id%3D%22Rectangle-34%22%20stroke%3D%22none%22%20fill%3D%22%2341474E%22%20fill-rule%3D%22evenodd%22%20points%3D%226.33333333%2015%203%2011.6666667%204.33333333%2010.3333333%206.33333333%2012.3333333%2011.6666667%207%2013%208.33333333%22%3E%3C/polygon%3E%0A%3C/svg%3E) center center no-repeat;
         }
     }
 }
