--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -80,8 +80,8 @@
         {
             padding: 0 10px;
 
-            border: none;
-            background: none;
+            border: 0;
+            background: 0;
 
             appearance: none;
         }
