--- a/src/style/_models.scss
+++ b/src/style/_models.scss
@@ -1,5 +1,10 @@
 .model
 {
+
+    .markdown p{
+        margin-top: 0px;
+    }
+
     font-size: 12px;
     font-weight: 300;
 
@@ -47,7 +52,7 @@
 
             content: '';
 
-            background: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>') center no-repeat;
+            background: url(data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2224%22%20height%3D%2224%22%20viewBox%3D%220%200%2024%2024%22%3E%0A%20%20%20%20%3Cpath%20d%3D%22M10%206L8.59%207.41%2013.17%2012l-4.58%204.59L10%2018l6-6z%22/%3E%0A%3C/svg%3E%0A) center center no-repeat;
             background-size: 100%;
         }
     }
@@ -95,70 +100,10 @@
 
     p
     {
-        margin: 0 0 1em 0;
-    }
-
-    .property
-    {
-        color: #999;
-        font-style: italic;
-
-        &.primitive
-        {
-             color: #6b6b6b;
-        }
+        margin: 0 0 0 0;
     }
 }
 
-table.model
-{
-    tr
-    {
-        &.description
-        {
-            color: #666;
-            font-weight: normal;
-            
-            td:first-child
-            {
-                font-weight: bold;
-            }
-        }
-
-        &.property-row
-        {
-            &.required td:first-child
-            {
-                font-weight: bold;
-            }
-
-            td
-            {
-                vertical-align: top;
-
-                &:first-child
-                {
-                    padding-right: 0.2em;
-                }
-            }
-
-            .star
-            {
-                color: red;
-            }
-        }
-
-        &.extension
-        {
-            color: #777;
-
-            td:last-child
-            {
-                vertical-align: top;
-            }
-        }
-    }
-}
 
 section.models
 {
@@ -166,11 +111,6 @@ section.models
 
     border: 1px solid rgba($section-models-border-color, .3);
     border-radius: 4px;
-
-    .pointer
-    {
-        cursor: pointer;
-    }
 
     &.is-open
     {
@@ -231,7 +171,6 @@ section.models
     .model-container
     {
         margin: 0 20px 15px;
-        position: relative;
 
         transition: all .5s;
 
@@ -252,18 +191,11 @@ section.models
         {
             margin: 0 20px;
         }
-
-        .models-jump-to-path {
-          position: absolute;
-          top: 8px;
-          right: 5px;
-          opacity: 0.65;
-        }
     }
 
     .model-box
     {
-        background: none;
+        background: 0;
     }
 }
 
@@ -271,7 +203,6 @@ section.models
 .model-box
 {
     padding: 10px;
-    display: inline-block;
 
     border-radius: 4px;
     background: rgba($section-models-model-box-background-color,.1);
@@ -294,13 +225,6 @@ section.models
     font-size: 16px;
 
     @include text_headline($section-models-model-title-font-color);
-
-    img
-    {
-        margin-left: 1em;
-        position: relative;
-        bottom: 0px;
-    }
 }
 
 .model-deprecated-warning
@@ -316,13 +240,15 @@ section.models
 
 span
 {
-     > span.model
-    {
-        .brace-close
-        {
-            padding: 0 0 0 10px;
-        }
-    }
+     >span.model {
+      .brace-open,
+      .brace-close {
+          user-select: none;
+      }
+      .brace-close {
+          user-select: none;
+      }
+  }
 }
 
 .prop-name
@@ -339,7 +265,11 @@ span
 
 .prop-enum
 {
-    display: block;
+    display: inline-block;
+    margin-top: -10px;
+    span{
+        font-size: 10px;
+    }
 }
 .prop-format
 {
