--- a/src/style/_table.scss
+++ b/src/style/_table.scss
@@ -1,96 +1,98 @@
-table
-{
-    width: 100%;
-    padding: 0 10px;
+// table
+// {
+//     width: 100%;
+//     padding: 0 10px;
 
-    border-collapse: collapse;
+//     border-collapse: collapse;
 
-    &.model
-    {
-        tbody
-        {
-            tr
-            {
-                td
-                {
-                    padding: 0;
+//     &.model
+//     {
+//         tbody
+//         {
+//             tr
+//             {
+//                 td
+//                 {
+//                     padding: 0;
 
-                    vertical-align: top;
+//                     vertical-align: top;
 
-                    &:first-of-type
-                    {
-                        width: 174px;
-                        padding: 0 0 0 2em;
-                    }
-                }
-            }
-        }
-    }
+//                     &:first-of-type
+//                     {
+//                         width: 124px;
+//                         padding: 0 0 0 2em;
+//                     }
+//                 }
+//             }
+//         }
+//     }
 
-    &.headers
-    {
-        td
-        {
-            font-size: 12px;
-            font-weight: 300;
+//     &.headers
+//     {
+//         td
+//         {
+//             font-size: 12px;
+//             font-weight: 300;
 
-            vertical-align: middle;
+//             vertical-align: middle;
 
-            @include text_code();
-        }
+//             @include text_code();
+//         }
+//     }
 
-        .header-example 
-        {
-            color: #999; 
-            font-style: italic;
-        }
-    }
+//     tbody
+//     {
+//         tr
+//         {
+//             td
+//             {
+//                 padding: 10px 0 0 0;
 
-    tbody
-    {
-        tr
-        {
-            td
-            {
-                padding: 10px 0 0 0;
+//                 vertical-align: top;
 
-                vertical-align: top;
+//                 &:first-of-type
+//                 {
+//                     max-width: 20%;
+//                     min-width: 6em;
+//                     padding: 10px 0;
+//                 }
+//             }
+//         }
+//     }
 
-                &:first-of-type
-                {
-                    min-width: 6em;
-                    padding: 10px 0;
-                }
-            }
-        }
-    }
+//     thead
+//     {
+//         tr
+//         {
+//             th,
+//             td
+//             {
+//                 font-size: 12px;
+//                 font-weight: bold;
 
-    thead
-    {
-        tr
-        {
-            th,
-            td
-            {
-                font-size: 12px;
-                font-weight: bold;
+//                 padding: 12px 0;
 
-                padding: 12px 0;
+//                 text-align: left;
 
-                text-align: left;
+//                 border-bottom: 1px solid rgba($table-thead-td-border-bottom-color, .2);
 
-                border-bottom: 1px solid rgba($table-thead-td-border-bottom-color, .2);
-
-                @include text_body();
-            }
-        }
-    }
-}
+//                 @include text_body();
+//             }
+//         }
+//     }
+// }
 
 .parameters-col_description
 {
-    width: 99%; // forces other columns to shrink to their content widths
-    margin-bottom: 2em;
+    p
+    {
+        font-size: 14px;
+
+        margin: 0;
+
+        @include text_body();
+    }
+
     input[type=text]
     {
         width: 100%;
@@ -105,41 +107,31 @@ table
 .parameter__name
 {
     font-size: 16px;
-    font-weight: normal;
-
-    // hack to give breathing room to the name column
-    // TODO: refactor all of this to flexbox
-    margin-right: .75em;
+    // font-weight: normal;
 
     @include text_headline();
 
-    &.required
-    {
-        font-weight: bold;
+    // &.required
+    // {
+    //     // font-weight: bold;
 
-        span
-        {
-            color: red;
-        }
+    //     &:after
+    //     {
+    //         font-size: 10px;
 
-        &:after
-        {
-            font-size: 10px;
+    //         position: relative;
+    //         top: -6px;
 
-            position: relative;
-            top: -6px;
+    //         padding: 5px;
 
-            padding: 5px;
+    //         content: 'required';
 
-            content: 'required';
-
-            color: rgba($table-parameter-name-required-font-color, .6);
-        }
-    }
+    //         color: rgba($table-parameter-name-required-font-color, .6);
+    //     }
+    // }
 }
 
-.parameter__in,
-.parameter__extension
+.parameter__in
 {
     font-size: 12px;
     font-style: italic;
@@ -155,40 +147,9 @@ table
     @include text_code($table-parameter-deprecated-font-color);
 }
 
-.parameter__empty_value_toggle {
-    display: block;
-    font-size: 13px;
-    padding-top: 5px;
-    padding-bottom: 12px;
-
-    input {
-        margin-right: 7px;
-    }
-
-    &.disabled {
-        opacity: 0.7;
-    }
-}
-
 
 .table-container
 {
-    padding: 20px;
-}
-
-
-.response-col_description {
-    width: 99%; // forces other columns to shrink to their content widths
-}
-
-.response-col_links {
-    min-width: 6em;
-}
-
-.response__extension
-{
-    font-size: 12px;
-    font-style: italic;
-
-    @include text_code($table-parameter-in-font-color);
+    // padding: 20px;
+    padding: 5px 10px 5px 10px;
 }
